# curverider-vault

./: .gitignore  Anchor.toml  COMPLETE.md  Cargo.toml  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  NON_CUSTODIAL_ARCHITECTURE.md  README.md  README_PROJECT.md  SECURITY_AUDIT_CHECKLIST.md  STRATEGIES.md  TESTING_APPROACHES.md  TESTING_DOCUMENTATION.md  TESTING_GUIDE.md  USER_GUIDE.md  my-keypair.json  package-lock.json  package.json  run-all-tests.sh  setup-noncustodial.sh  setup.sh  test.sh
bot/: .env.example  README.md  package.json
bot-rust/: .dockerignore  .env.example  .env.railway.example  .gitignore  Cargo.toml  Dockerfile  QUICKSTART.md  README.md  STRATEGY.md
bot-rust/src/: analyzer.rs  api.rs  config.rs  error.rs  main.rs  scanner.rs  trader.rs  types.rs
bot-rust/src/tests/: analyzer_tests.rs  integration_tests.rs  mod.rs
bot-rust/tests/: bot_comprehensive.rs  integration_test.rs
bot/src/: index.ts
frontend/: CHECKLIST.md  DESIGN_SYSTEM.md  HYDRATION_FIX.md  QUICKSTART.md  README.md  TESTING_GUIDE.md  TRANSFORMATION_SUMMARY.md  VISUAL_PREVIEW.md  next.config.ts  package-lock.json  package.json  wrangler.jsonc  wrangler.toml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dapp/: page.tsx
frontend/components/: AnimatedCard.tsx  AnimatedStat.tsx  DelegationManager.tsx  FloatingElements.tsx  GlowButton.tsx  Hero3D.tsx  LoadingSpinner.tsx  PositionsMonitor.tsx  StrategySelector.tsx  WalletProvider.tsx
frontend/lib/: botApi.ts
programs/: BUILD_GUIDE.md
programs/curverider-vault/: Cargo.toml
programs/curverider-vault/src/: lib.rs  lib_mainnet.rs  lib_noncustodial.rs  lib_noncustodial_with_tests.rs
programs/curverider-vault/tests/: anchor_integration.rs  integration.rs
tests/: curverider-vault.ts  fuzz-tests.ts  invariant-tests.ts  noncustodial-vault.ts
