[package]
name = "curverider-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Solana Core
solana-client = "1.16.14"
solana-sdk = "1.16.14"
solana-account-decoder = "1.16.14"
anchor-client = "0.30.0"
anchor-lang = "0.30.0"
spl-token = "3.5.0"
spl-associated-token-account = "1.1.2"

# Async Runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# HTTP & WebSocket
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = "0.21"
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
dotenv = "0.15"
config = "0.13"

# Utilities
bs58 = "0.5"
base64 = "0.21"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4"] }
rand = "0.8"

# Math & Statistics
rust_decimal = "1.33"
statrs = "0.16"

[dev-dependencies]
mockito = "1.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
