
[package]
name = "curverider-vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "curverider_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
custom-heap = []
custom-panic = []
anchor-debug = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.0", features = ["init-if-needed"] }
anchor-spl = "0.30.0"
 spl-token-2022 = "3.0.2"
spl-associated-token-account = "1.1.2"
solana-program-test = "1.16.14"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
solana-sdk = "1.18.14"
